🐛 调整资源加载方式